fixed img stretching

--- a/styles.css
+++ b/styles.css
@@ -2721,3 +2721,7 @@ figcaption {
 .jdg-track-title {
   margin-bottom: 30px;
 }
+
+img {
+  object-fit: contain;
+}
